Qui Jun 11 11:44:49 BRT 2015
- Create lib.sh module
- Improves the compilers file
- Variables in the rede.sh file
- Create the README file

Tue Jun 16 10:13:25 BRT 2015
- Add the samples DIR
- Add AUTHOR in AUTHORS file
- Create the libreoffice.sh file
- Adding a new collaborator (Artur)