@@ -1,0 +1,14 @@
+# Universidade Federal de Sergipe
+# Centro de Ciências Exatas e Tecnológicas
+# Departamento de Computação
+# Sanity
+
+# Módulo principal
+
+#!/bin/bash
+
+./rede.sh
+./compiladores.sh
+./lib.sh
+./libreoffice.sh
+./ide.sh
